# rttc

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yml
docs/: test-results.txt  types.md
src/type_check/: core.py  primitives.py
tests/: 01-simple.py  02-multiple.py  03-nested.py  04-unions.py  05-inherit.py  06-guard.py  __init__.py  __logger__.py  __main__.py
type_check/: __init__.py  __private__.py  builtin_checks.py  core.py  primitives.py  proxy.py  transparent.py
